<resources>
    <string name="app_name">To-do List</string>
    <string name="title_activity_to_do_list">ToDoListActivity</string>
    <string name="todo">TODO:</string>
    <string name="done">DONE:</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description...</string>
    <string name="location_hint">Location</string>
    <string name="duplicated_item_message">Item already exists.</string>
</resources>
