<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_to_do_list"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sikaeapps.to_dolist.ToDoListActivity"
    tools:showIn="@layout/activity_to_do_list">

    <TextView
        android:id="@+id/to_do_text_view"
        android:text="@string/todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ListView
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:id="@+id/to_do_list_view"
        android:entries="@array/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <TextView
        android:id="@+id/done_text_view"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:id="@+id/done_list_view"
        android:entries="@array/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
</LinearLayout>
