<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:mode="same_level"
    app:dragEdge="right">

    <LinearLayout
        android:id="@+id/delete_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:src="@android:drawable/checkbox_on_background"
            android:id="@+id/check_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ImageButton
            android:src="@android:drawable/ic_menu_delete"
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/to_do_item_list_view"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/item_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>

</com.chauthai.swipereveallayout.SwipeRevealLayout>
